fix: UI buttons now visible even on a bright background

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -591,6 +591,7 @@ h2 {
 .ui-button img {
   height: 100%;
   image-rendering: pixelated;
+  filter: drop-shadow(0px 0px 3px rgba(0, 0, 0, 0.6));
 }
 
 input[type="range"] {
